
1.0.0 (unreleased)
------------------

- fixed a bug when used with containers with spaces inside the id
  (close `#2`__) [keul]
- file icon of generated elements where not handled in the right way
  (close `#3`__) [keul]
- added a way to invalidate JS cache
  (close `#1`__) [keul]
- now general selectors can match also elements that are not <a>, but
  link's contents
  (close `#4`__) [keul]

  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/2
  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/3
  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/1
  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/4

0.4.0 (2012-11-15)
------------------

* added a product's browser layer
  [keul]
* provided an own configuration panel
  [keul]
* added all remaining configutation in Plone UI
  [keul]
* ``toggleContainerClass`` now is ``toggleContainerClasses``
  (can be used for a set of classes)
  [keul]
* added i18n support and italian translation
  [keul]
* changes AJAX calling context, now always calling portal root URL
  [keul]
* added tests (both Plone and JavaScript)
  [keul]

0.3.0 (2011-06-07)
------------------

* you can now use more general `jQuery selector`__ instead of simple URL path [keul]
* do not show types that are in list of unwanted types in navigation [keul]
* ``collective.navigationtoggle.txt`` was empty [keul]
* JSLint cleanup [keul]
* code is more general, and new properties likes ``toggleContainerClass``, ``listType``
  and ``listItem`` has been added.
  The code now can be used to simulate navigators also with not portlet navigator
  structures [keul]
* added the uninstall GS step [keul]
* fixed the `simplejson`__ dependency correctly, only if with Python < 2.6 [keul]
* links selectors can be added through Plone UI [keul]

__ http://docs.jquery.com/Selectors
__ http://pypi.python.org/pypi/simplejson

0.2.1 (2010-07-09)
------------------
